create TextField component

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Comeon In</title>
+    <link href="https://fonts.googleapis.com/css?family=Eczar:800|Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
