--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Comeon In</title>
     <link href="https://fonts.googleapis.com/css?family=Eczar:800|Roboto&display=swap" rel="stylesheet">
 </head>
